<resources>
    <string name="app_name">@string/gym_home</string>
    <string name="user_login">USER</string>
    <string name="pass_login">PASSWORD</string>
    <string name="btn_login">GO</string>
    <string name="login">LOGIN</string>
    <string name="gym_home">HOME GYM</string>
    <string name="main_Welcome">HOME GYM</string>
    <string name="activity_meta">META</string>
    <string name="eating_habits">IMPROVE EATING HABITS</string>
    <string name="loseWeight">LOSE WEIGHT</string>
    <string name="testWeight">IDEAL WEIGHT TEST</string>
    <string name="Routine30">ROUTINE 30 DAYS</string>

    <string name="ArmName">ARM</string>
    <string name="ButtocksName">BUTTOCKS</string>
    <string name="AbdomenName">ABDOMEN</string>
    <string name="LegsName">LEGS</string>

    <string name="Continue">CONTINUE</string>

    <string name="UserName">\@YOU_USER</string>
    <string name="nameUser">NAME</string>
    <string name="PassWordConfirm">CONFIRM PASSWORD</string>
    <string name="PassWord">PASSWORD</string>
    <string name="RegisterUser">REGISTER</string>

</resources>