<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        style="@style/AppTheme.EditTextTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/RegisterUser" />

    <EditText
        android:id="@+id/etR_IdUser"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UserName" />

    <EditText
        android:id="@+id/etR_NameUser"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameUser" />

    <EditText
        android:id="@+id/etR_Pass"
        android:inputType="textPassword"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PassWord" />

    <EditText
        android:id="@+id/etR_ConfPass"
        android:inputType="textPassword"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PassWordConfirm" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="230dp"/>

    <Button
        android:id="@+id/btnR_ActionRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:onClick="AddUser"
        android:layout_gravity="bottom"
        android:textSize="30sp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/RegisterUser"/>

</LinearLayout>