<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:foregroundTint="#000000"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center|top"
        android:src="@drawable/ic_android_black_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50sp"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/icon_user"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/user_login" />

    <EditText
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/icon_lock_login"
        android:gravity="center"
        android:hint="@string/pass_login" />

    <Button
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/btn_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="or"
        android:textSize="25sp"
        android:gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="SIGN IN"/>


</LinearLayout>
